// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter Element renders counter 1`] = `
<div
  className="tribe-editor__counter"
>
  <span
    className="tribe-editor__counter__count"
  />
  <span
    className="tribe-editor__counter__label"
  />
</div>
`;

exports[`Counter Element renders counter with class 1`] = `
<div
  className="tribe-editor__counter test-class"
>
  <span
    className="tribe-editor__counter__count"
  />
  <span
    className="tribe-editor__counter__label"
  />
</div>
`;

exports[`Counter Element renders counter with count 1`] = `
<div
  className="tribe-editor__counter"
>
  <span
    className="tribe-editor__counter__count"
  >
    42
  </span>
  <span
    className="tribe-editor__counter__label"
  />
</div>
`;

exports[`Counter Element renders counter with label 1`] = `
<div
  className="tribe-editor__counter"
>
  <span
    className="tribe-editor__counter__count"
  />
  <span
    className="tribe-editor__counter__label"
  >
    test-label
  </span>
</div>
`;
